--- a/styles.css
+++ b/styles.css
@@ -980,3 +980,22 @@ nav{
     border: 5px solid gray;
     display: block;
   }
+
+    .checkbox {
+        position: relative;
+        display: inline-block;
+        width: 20px;
+        height: 20px;
+    }
+
+    .checkbox:checked:after {
+        content: "\f00c"; /* code for the check mark icon */
+        font-family: "Font Awesome 5 Free";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        line-height: 20px;
+    }
